# DjHL

./: .gitignore  .travis.yml  CODE_OF_CONDUCT.md  Docker-compose  LICENSE  README.md  contributing.md  manage.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yaml
contrib/: env-sample
djhl/: asgi.py  settings.py  urls.py  wsgi.py
djhl/book/: apps.py
djhl/book/tests/: test_apps.py
djhl/user/: apps.py  models.py  serializers.py  views.py
djhl/user/migrations/: 0001_initial.py
djhl/user/tests/: test_api.py  test_apps.py  test_model.py
