[tool.poetry]
name = "djhl"
version = "0.1.0"
description = "Django Home Library application provides centralized management for libraries."
authors = ["Vicente Marçal <vicente.marcal@gmail.com>"]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/Riverfount/DjHL"
# homepage = ""
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Web Environment",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD-3-Clause",
    "Operating System :: OS Independent",
    "Programming Language :: Python 3",
    "Topic :: Internet :: Library Manager System"
]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
