[tool.poetry]
name = "djhl"
version = "0.1.0"
description = "Django Home Library application provides centralized management for libraries."
authors = ["Vicente Marçal <vicente.marcal@gmail.com>"]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/Riverfount/DjHL"
# homepage = ""
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Web Environment",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD-3-Clause",
    "Operating System :: OS Independent",
    "Programming Language :: Python 3",
    "Topic :: Internet :: Library Manager System"
]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.7"
python-decouple = "^3.3"
djangorestframework = "^3.11.0"
markdown = "^3.2.2"
django-filter = "^2.3.0"
psycopg2-binary = "^2.8.5"
dj-database-url = "^0.5.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
pytest-django = "^3.9.0"
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
